tests/valid/valid_wildcard_keys_validation.csl
config WildcardKeyCheck {
  platforms: {
    *: { lib_path: string; };
  };
  constraints {
    validate wildcard_keys(platforms) @regex("^[a-z0-9_]+$");
  };
}
