tests/invalid/invalid_annotation_string_on_number.csl
config InvalidAnn2 {
  age: number @regex("^[0-9]+$");
}
